---------------------------------------------------------------------------------------------------
Version: 1.4.7
Date: ???
  Bugfixes:
    - Fixed being able to quick toggle a spidertron whilst another spidertron is riding on top of it
    - Fixed z-fighting graphical artifacts appearing when a spidertron dismounts another spidertron
---------------------------------------------------------------------------------------------------
Version: 1.4.6
Date: 5 April 2021
  Features:
    - 'Spidertron remote pipette' will now optionally select an unconnected remote if no connected remotes are found
  Changes:
    - 'Call last used spidertron' shortcut now becomes unavailable when there is no last used spidertron to call
  Bugfixes:
    - Fixed spidertron remotes not being reconnected after toggling a spidertron if their inventory position had changed
---------------------------------------------------------------------------------------------------
Version: 1.4.5
Date: 29 March 2021
  Compatibility:
    - Companion drones no longer generate corpses upon death
  Bugfixes:
    - Fixed items with data (such as equipment grids) losing their data when stored in spidertron corpses
    - Fixed modded spidertron fuel (e.g. Krastorio2 or Tarantulator) not being stored in spidertron corpses
---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: 29 March 2021
  Bugfixes:
    - Fixed crash when spidertron dies
    - Fixed modded spidertron fuel (e.g. Krastorio2 or Tarantulator) being lost when the spidertron enters a vehicle or the player
---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 26 March 2021
  Bugfixes:
    - Fixed 'Call last used spidertron' shortcut not being toggled off when a remote is used to order the spidertron
---------------------------------------------------------------------------------------------------
Version: 1.4.2