@@ -1,8 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.7
 Date: ???
+  Changes:
+    - Players now keep their walking state when quick-toggling into a spidertron (so they don't have to re-press WASD)
   Bugfixes:
-    - Fixed being able to quick toggle a spidertron whilst another spidertron is riding on top of it
+    - Fixed being able to quick toggle a spidertron whilst another spidertron is riding on top of it (leaving behind a floating head)
     - Fixed z-fighting graphical artifacts appearing when a spidertron dismounts another spidertron
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.6
